# slct-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml  slct.rs
.github/workflows/: test.yml
src/: main.rs
